created files by stock over 2 year periods and more eda

--- a/src/data/eda/00_eda.ipynb
+++ b/src/data/eda/00_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "df1 = pd.read_csv(os.path.join(data_dir, file1))\n",
-    "# df2 = pd.read_csv(os.path.join(data_dir, file2))"
+    "df2 = pd.read_csv(os.path.join(data_dir, file2))"
    ]
   },
   {
@@ -455,210 +455,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>Ticker</th>\n",
-       "      <th>OpenPrice</th>\n",
-       "      <th>HighPrice</th>\n",
-       "      <th>LowPrice</th>\n",
-       "      <th>ClosePrice</th>\n",
-       "      <th>TotalVolume</th>\n",
-       "      <th>TotalQuantity</th>\n",
-       "      <th>TotalTradeCount</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>38289</th>\n",
-       "      <td>20201125</td>\n",
-       "      <td>09:31:00</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>115.55</td>\n",
-       "      <td>115.85</td>\n",
-       "      <td>115.50</td>\n",
-       "      <td>115.71</td>\n",
-       "      <td>55882181.95</td>\n",
-       "      <td>482972</td>\n",
-       "      <td>1973</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38290</th>\n",
-       "      <td>20201125</td>\n",
-       "      <td>09:32:00</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>115.72</td>\n",
-       "      <td>115.75</td>\n",
-       "      <td>115.32</td>\n",
-       "      <td>115.35</td>\n",
-       "      <td>59145420.29</td>\n",
-       "      <td>512045</td>\n",
-       "      <td>2010</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38291</th>\n",
-       "      <td>20201125</td>\n",
-       "      <td>09:33:00</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>115.35</td>\n",
-       "      <td>115.45</td>\n",
-       "      <td>115.17</td>\n",
-       "      <td>115.43</td>\n",
-       "      <td>52058312.51</td>\n",
-       "      <td>451494</td>\n",
-       "      <td>1821</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38292</th>\n",
-       "      <td>20201125</td>\n",
-       "      <td>09:34:00</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>115.42</td>\n",
-       "      <td>115.73</td>\n",
-       "      <td>115.42</td>\n",
-       "      <td>115.55</td>\n",
-       "      <td>56318234.78</td>\n",
-       "      <td>487406</td>\n",
-       "      <td>2049</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38293</th>\n",
-       "      <td>20201125</td>\n",
-       "      <td>09:35:00</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>115.55</td>\n",
-       "      <td>115.78</td>\n",
-       "      <td>115.35</td>\n",
-       "      <td>115.74</td>\n",
-       "      <td>54270169.03</td>\n",
-       "      <td>469716</td>\n",
-       "      <td>2184</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38294</th>\n",
-       "      <td>20201125</td>\n",
-       "      <td>09:36:00</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>115.74</td>\n",
-       "      <td>115.99</td>\n",
-       "      <td>115.70</td>\n",
-       "      <td>115.93</td>\n",
-       "      <td>54646782.74</td>\n",
-       "      <td>471606</td>\n",
-       "      <td>1879</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38295</th>\n",
-       "      <td>20201125</td>\n",
-       "      <td>09:37:00</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>115.94</td>\n",
-       "      <td>116.27</td>\n",
-       "      <td>115.92</td>\n",
-       "      <td>116.26</td>\n",
-       "      <td>79010367.18</td>\n",
-       "      <td>680689</td>\n",
-       "      <td>2832</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38296</th>\n",
-       "      <td>20201125</td>\n",
-       "      <td>09:38:00</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>116.26</td>\n",
-       "      <td>116.44</td>\n",
-       "      <td>116.25</td>\n",
-       "      <td>116.38</td>\n",
-       "      <td>65288749.14</td>\n",
-       "      <td>561057</td>\n",
-       "      <td>2362</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38297</th>\n",
-       "      <td>20201125</td>\n",
-       "      <td>09:39:00</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>116.38</td>\n",
-       "      <td>116.50</td>\n",
-       "      <td>116.30</td>\n",
-       "      <td>116.33</td>\n",
-       "      <td>60350209.56</td>\n",
-       "      <td>518392</td>\n",
-       "      <td>2302</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38298</th>\n",
-       "      <td>20201125</td>\n",
-       "      <td>09:40:00</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>116.33</td>\n",
-       "      <td>116.51</td>\n",
-       "      <td>116.21</td>\n",
-       "      <td>116.23</td>\n",
-       "      <td>59309255.71</td>\n",
-       "      <td>509636</td>\n",
-       "      <td>2186</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           Date Timestamp Ticker  OpenPrice  HighPrice  LowPrice  ClosePrice  \\\n",
-       "38289  20201125  09:31:00   AAPL     115.55     115.85    115.50      115.71   \n",
-       "38290  20201125  09:32:00   AAPL     115.72     115.75    115.32      115.35   \n",
-       "38291  20201125  09:33:00   AAPL     115.35     115.45    115.17      115.43   \n",
-       "38292  20201125  09:34:00   AAPL     115.42     115.73    115.42      115.55   \n",
-       "38293  20201125  09:35:00   AAPL     115.55     115.78    115.35      115.74   \n",
-       "38294  20201125  09:36:00   AAPL     115.74     115.99    115.70      115.93   \n",
-       "38295  20201125  09:37:00   AAPL     115.94     116.27    115.92      116.26   \n",
-       "38296  20201125  09:38:00   AAPL     116.26     116.44    116.25      116.38   \n",
-       "38297  20201125  09:39:00   AAPL     116.38     116.50    116.30      116.33   \n",
-       "38298  20201125  09:40:00   AAPL     116.33     116.51    116.21      116.23   \n",
-       "\n",
-       "       TotalVolume  TotalQuantity  TotalTradeCount  \n",
-       "38289  55882181.95         482972             1973  \n",
-       "38290  59145420.29         512045             2010  \n",
-       "38291  52058312.51         451494             1821  \n",
-       "38292  56318234.78         487406             2049  \n",
-       "38293  54270169.03         469716             2184  \n",
-       "38294  54646782.74         471606             1879  \n",
-       "38295  79010367.18         680689             2832  \n",
-       "38296  65288749.14         561057             2362  \n",
-       "38297  60350209.56         518392             2302  \n",
-       "38298  59309255.71         509636             2186  "
+       "(390, 10)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1[df1['Ticker'] == 'AAPL'][:10]"
+    "df1[df1['Ticker'] == 'AAPL'].shape"
    ]
   },
   {
@@ -1371,7 +1183,7 @@
     }
    ],
    "source": [
-    "df1[df1['Ticker'] == 'F'][:10]"
+    "df1[df1['Ticker'] == 'F'].count()"
    ]
   },
   {
@@ -1448,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1942,7 +1754,7 @@
        " 'TDY': 'Teledyne Technologies Inc'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1956,7 +1768,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "Interesting features:\n",
+    "1. Industry\n",
+    "2. Institutional ownership\n",
+    "3. upw\n",
+    "\"\"\""
+   ]
   },
   {
    "cell_type": "code",
