--- a/src/data/scraping/scraping_yahoo.ipynb
+++ b/src/data/scraping/scraping_yahoo.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -69,13 +69,103 @@
       "Current Price:  277.81\n",
       "Current Price:  277.81\n",
       "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
+      "Current Price:  277.81\n",
       "Current Price:  277.81\n"
      ]
     }
    ],
    "source": [
     "# stock market is closed right now\n",
-    "for _ in range(10):\n",
+    "for _ in range(100):\n",
     "    print(\"Current Price: \", str(parse_price()))"
    ]
   },
