--- a/src/data/eda/01_eda_create_each_stock.ipynb
+++ b/src/data/eda/01_eda_create_each_stock.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,98 +18,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|          | 0/3248 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Volumes/Seagate-Backup/financial-data/AS500-by-stock/08\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|          | 1/3248 [00:06<5:33:01,  6.15s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Volumes/Seagate-Backup/financial-data/AS500-by-stock/08\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|          | 2/3248 [00:12<5:33:57,  6.17s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Volumes/Seagate-Backup/financial-data/AS500-by-stock/08\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|          | 3/3248 [00:19<5:43:03,  6.34s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Volumes/Seagate-Backup/financial-data/AS500-by-stock/08\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|          | 4/3248 [00:25<5:48:17,  6.44s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Volumes/Seagate-Backup/financial-data/AS500-by-stock/08\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|          | 5/3248 [00:32<5:54:42,  6.56s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Volumes/Seagate-Backup/financial-data/AS500-by-stock/08\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def write_dataframe(df, tickers: list, output_dir: str):\n",
     "    for ticker in tickers:\n",
@@ -139,9 +48,8 @@
     "    ret.append(output_folder)\n",
     "    year = [year_ranges for year_ranges in folders if year in year_ranges][0]\n",
     "    ret.append(year)\n",
-    "    ret = '/'.join(ret)\n",
-    "    print(ret)\n",
-    "    return ret\n",
+    "    \n",
+    "    return '/'.join(ret)\n",
     "\n",
     "def create_company_files(data_dir: str, output_folder: str): # output_folder is AS500-by-stock\n",
     "\n",
@@ -168,225 +76,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data_dir = '/Volumes/Seagate-Backup/financial-data/AS500-all-data'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# test with just 2 files\n",
-    "file1 = '20201124.csv'\n",
-    "file2 = '20201125.csv'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>Ticker</th>\n",
-       "      <th>OpenPrice</th>\n",
-       "      <th>HighPrice</th>\n",
-       "      <th>LowPrice</th>\n",
-       "      <th>ClosePrice</th>\n",
-       "      <th>TotalVolume</th>\n",
-       "      <th>TotalQuantity</th>\n",
-       "      <th>TotalTradeCount</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20201124</td>\n",
-       "      <td>09:31:00</td>\n",
-       "      <td>TXT</td>\n",
-       "      <td>47.25</td>\n",
-       "      <td>47.64</td>\n",
-       "      <td>47.06</td>\n",
-       "      <td>47.63</td>\n",
-       "      <td>108941.13</td>\n",
-       "      <td>2297</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>20201124</td>\n",
-       "      <td>09:32:00</td>\n",
-       "      <td>TXT</td>\n",
-       "      <td>47.56</td>\n",
-       "      <td>47.56</td>\n",
-       "      <td>47.35</td>\n",
-       "      <td>47.35</td>\n",
-       "      <td>10484.85</td>\n",
-       "      <td>221</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20201124</td>\n",
-       "      <td>09:34:00</td>\n",
-       "      <td>TXT</td>\n",
-       "      <td>47.28</td>\n",
-       "      <td>47.37</td>\n",
-       "      <td>47.18</td>\n",
-       "      <td>47.18</td>\n",
-       "      <td>93669.97</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>20201124</td>\n",
-       "      <td>09:35:00</td>\n",
-       "      <td>TXT</td>\n",
-       "      <td>47.36</td>\n",
-       "      <td>47.36</td>\n",
-       "      <td>47.13</td>\n",
-       "      <td>47.13</td>\n",
-       "      <td>42483.00</td>\n",
-       "      <td>900</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>20201124</td>\n",
-       "      <td>09:36:00</td>\n",
-       "      <td>TXT</td>\n",
-       "      <td>47.19</td>\n",
-       "      <td>47.26</td>\n",
-       "      <td>47.05</td>\n",
-       "      <td>47.24</td>\n",
-       "      <td>148775.50</td>\n",
-       "      <td>3152</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Date Timestamp Ticker  OpenPrice  HighPrice  LowPrice  ClosePrice  \\\n",
-       "0  20201124  09:31:00    TXT      47.25      47.64     47.06       47.63   \n",
-       "1  20201124  09:32:00    TXT      47.56      47.56     47.35       47.35   \n",
-       "2  20201124  09:34:00    TXT      47.28      47.37     47.18       47.18   \n",
-       "3  20201124  09:35:00    TXT      47.36      47.36     47.13       47.13   \n",
-       "4  20201124  09:36:00    TXT      47.19      47.26     47.05       47.24   \n",
-       "\n",
-       "   TotalVolume  TotalQuantity  TotalTradeCount  \n",
-       "0    108941.13           2297               16  \n",
-       "1     10484.85            221                2  \n",
-       "2     93669.97           1980               12  \n",
-       "3     42483.00            900                8  \n",
-       "4    148775.50           3152               19  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df1 = pd.read_csv(os.path.join(data_dir, file1))\n",
-    "df2 = pd.read_csv(os.path.join(data_dir, file2))\n",
-    "df1.head()\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ticker1 = list(df1.Ticker.unique())\n",
-    "ticker2 = list(df2.Ticker.unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_dir = '/Volumes/Seagate-Backup/financial-data/AS500-by-stock'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files = [file1, file2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "count = 0\n",
-    "for file in files:\n",
-    "    df = pd.read_csv(os.path.join(data_dir, file))\n",
-    "    tickers = list(df.Ticker.unique())\n",
-    "    for ticker in tickers:\n",
-    "        df1 = df[df['Ticker'] == ticker]\n",
-    "        \n",
-    "        output_file = ticker + '.csv'\n",
-    "#         output = os.path.join(output_dir, ticker+'.csv')\n",
-    "        if output_file in os.listdir(output_dir):\n",
-    "#             df2 = pd.read_csv(os.path.join(output_dir, output_file))\n",
-    "            df1.to_csv(output_file, mode = 'a', header = False) # key--appending to file not loading in memory\n",
-    "#             union_df = pd.concat\n",
-    "        else:\n",
-    "            df1.to_csv(output_file)\n",
-    "            \n",
-    "        count +=1\n",
-    "        if count == 3:\n",
-    "            break\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "count = 0\n",
-    "for filename in os.listdir(data_dir):\n",
-    "    count+=1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
