updated eda notebook

--- a/src/data/eda/01_eda_create_each_stock.ipynb
+++ b/src/data/eda/01_eda_create_each_stock.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "import time\n",
     "\n",
     "from tqdm import tqdm"
    ]
@@ -18,7 +19,15 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  2%|▏         | 78/3248 [12:35<12:41:10, 14.41s/it]"
+     ]
+    }
+   ],
    "source": [
     "def write_dataframe(df, tickers: list, output_dir: str):\n",
     "    for ticker in tickers:\n",
@@ -34,6 +43,7 @@
     "            output_file = output_file.replace('/', '_')\n",
     "            \n",
     "        if output_file in os.listdir(output_dir):\n",
+    "            # only appends without loading file to avoid using excess memory\n",
     "            company.to_csv(os.path.join(output_dir, output_file), mode = 'a', header = False)\n",
     "        else:\n",
     "            company.to_csv(os.path.join(output_dir, output_file))\n",
@@ -53,8 +63,12 @@
     "\n",
     "def create_company_files(data_dir: str, output_folder: str): # output_folder is AS500-by-stock\n",
     "\n",
-    "    \n",
+    "    sleep = 0\n",
     "    for file in tqdm(os.listdir(data_dir)):\n",
+    "        sleep +=1\n",
+    "        if sleep % 100 == 0:\n",
+    "            print(file)\n",
+    "            time.sleep(180)\n",
     "        \n",
     "        # file info\n",
     "        year = file.split('.')[0][2:4]\n",
