added additional eda

--- a/src/data/eda/00_eda.ipynb
+++ b/src/data/eda/00_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1821,10 +1821,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'08': 251,\n",
+       " '09': 252,\n",
+       " '10': 252,\n",
+       " '11': 252,\n",
+       " '12': 250,\n",
+       " '13': 252,\n",
+       " '14': 252,\n",
+       " '15': 252,\n",
+       " '16': 252,\n",
+       " '17': 251,\n",
+       " '18': 251,\n",
+       " '19': 252,\n",
+       " '20': 229}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# how many files per year\n",
+    "count = {}\n",
+    "for file in os.listdir(data_dir):\n",
+    "    file = file[2:4]\n",
+    "    if file not in count:\n",
+    "        count[file] = 1\n",
+    "    else:\n",
+    "        count[file] +=1\n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3248"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(os.listdir(data_dir))"
+   ]
   },
   {
    "cell_type": "code",
